--- a/client/src/components/CSS/login.css
+++ b/client/src/components/CSS/login.css
@@ -1,21 +1,73 @@
-html body{
-    margin: 0px;
-    padding: 0px;
-    /* background-image: url("../img/ball.jpg"); */
-    /* background-image: url("../../img/ball.jpg");
-	background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh; */
+.login{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.main{
+
+.login-form > h1{
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+
+.login-form > form > h5{
+    margin-bottom: 5px;
+}
+
+.login-form > form > input{
+    height: 30px;
+    margin-bottom: 10px;
+    width: 98%;
+}
+
+.login-form > p{
+    margin-top: 15px;
+    font-size: 12px;
+}
+
+.signIn{
+    background: #f0c14b;
+    border-radius: 2px;
+    width: 100%;
+    height: 30px;
+    border: 1px solid;
+    margin-top: 10px;
+    border-color: #a88734 #9c7e31 #846a29;
+    cursor: pointer;
+}
+.signUp{
+    border-radius: 2px;
+    width: 100%;
+    height: 30px;
+    border: 1px solid;
+    margin-top: 10px;
+    border-color: darkgray;
+    cursor: pointer;
+}
+
+.login-form{
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    padding:20px;;
+    border: 1px solid lightgray;
+}
+.amazon-logo{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 100px;
+    object-fit: contain;
+}
+
+
+/* .main{
     margin: 0px;
-    padding:0px;
+    padding:0px; */
     /* height: 100vh; */
     /* background-image: url("../../img/ball.jpg");
 	background-repeat: no-repeat;
     background-size: cover;
     height: 100vh; */
-}
+/* }
 .login {
 	display: flex;
 	flex-direction: column;
@@ -76,4 +128,4 @@ html body{
 	margin-bottom: 20px;
 	width: 100px;
 	object-fit: contain;
-}
+} */
