--- a/client/src/App.css
+++ b/client/src/App.css
@@ -280,11 +280,11 @@ img {
 	margin: 1.2rem 0;
 }
 
-/* .form .form-text {
+.form .form-text {
 	display: block;
 	margin-top: 0.3rem;
 	color: rgb(14, 13, 13);
-} */
+}
 
 .form input[type="text"],
 .form input[type="email"],
