--- a/client/src/components/CSS/Navbar1.css
+++ b/client/src/components/CSS/Navbar1.css
@@ -93,3 +93,8 @@ span{
 	padding-top: 12px;
 	border-radius: 4px;
 }
+.arrow {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
